[metadata]
name = pushnotif
version = 0.0.1
author = Rehan Ahmed
author_email = rehanahmed.app@gmail.com
description = Generate Push Notifications to IFTTT from Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/reallyrehan/pushnotif
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True